# lucena-engine

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml
.github/workflows/: release.yml
packaging/: README.md
packaging/homebrew/: lucena-engine.rb
proto/lucena/engine/v1/: engine.proto
python/lucena_engine/: __init__.py  _fen.py  _pesto.py  analysis.py  board.py  brilliant.py  cli.py  detect.py  evalmodel.py  facts.py  gamepass.py  hints.py  line_tree.py  maia.py  openings.py  pgn.py  poisoned_line_detector.py  positional.py  puzzle.py  reads.py  uci.py
python/lucena_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/lucena_engine/_pb/: engine_pb2.py  engine_pb2_grpc.py
python/lucena_engine/data/: openings.tsv
python/lucena_engine/detectors/: __init__.py  _util.py  combination.py  defender.py  fork.py  hanging.py  null_move.py  pin.py
python/lucena_engine/server/: __init__.py  _map.py  behaviour.py  serve.py  truth.py
rust/: Cargo.toml
rust/src/: lib.rs  see.rs
scripts/: gen_proto.sh  maia_policy_uci.py
tests/: test_analysis.py  test_board.py  test_board_adversarial.py  test_brilliant.py  test_combination.py  test_detect.py  test_engine_reconcile.py  test_evalmodel.py  test_facts.py  test_fork.py  test_gpl_hygiene.py  test_grpc_smoke.py  test_hints.py  test_line_tree.py  test_maia.py  test_nnue.py  test_openings.py  test_pin.py  test_positional.py  test_see.py  test_see_adversarial.py  test_uci.py
