[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lucena-engine"
version = "0.2.0"
description = "Stockfish + Maia wrapper: engine sessions over UCI, eval semantics (win%, Score, glyphs), NNUE parsing"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
authors = [{ name = "Avismara" }]
keywords = ["chess", "stockfish", "maia", "uci", "eval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/distressedrook/lucena-engine"
Repository = "https://github.com/distressedrook/lucena-engine"
Issues = "https://github.com/distressedrook/lucena-engine/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "python-chess>=1.10",  # tests/tooling ONLY — never imported under python/lucena_engine/
]


[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: needs big downloads or long engine runs",
    "engine: needs a Stockfish binary (fast at low node counts)",
]
